--- a/styles/sass/_settings.scss
+++ b/styles/sass/_settings.scss
@@ -60,10 +60,13 @@ $embed-media-maxwidth: 70%;
 
 body {
   margin: 0;
+  overflow-x: hidden;
+  position: relative;
 }
 
 html {
   min-width: 320px;
+  overflow-x: hidden;
 }
 
 $section-vertical-margin: 1rem;
